[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "wheel", 'pybind11>=2.11', 'cmake']

[project]
authors = [
  {name = "Vincent Deo", email = "vdeo@naoj.org"},
]
description = "Python bindings and utilities to use with MILK and CACAO"
name = "pyMilk"
readme = "README.md"
version = "1.2"
dependencies = [
  "docopt",
  "libtmux",
  "numpy",
  "tqdm",
  "astropy",
]

[project.urls]
"Homepage" = "http://www.github.com/milk-org/pyMilk"


[tool.setuptools.packages.find]
include=["pyMilk*"]

[tool.setuptools]
script-files = [
                "pyMilk/visual/shmPlot.py",
                "pyMilk/visual/shmImshow.py",
                "pyMilk/scripts/zmq_send.py",
                "pyMilk/scripts/zmq_recv.py",
                "pyMilk/scripts/updatekw",
                "pyMilk/scripts/creashmim",
                "pyMilk/visual/shmTermshow.py"
]




[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.pyright]
extraPaths = ["/home/vdeo/src/swmain",] # Need to list scexao's pip install -e packages...
typeCheckingMode = "basic" # off | basic | standard | strict # Look there https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["pyMilk"]
exclude = ["build/",
           "**/__pycache__",
           "**/.mypy_cache",
           "**/.pytest_cache",
           "ImageStreamIO",
           ".eggs",
           "pyMilk/visual", # TODO LATER
           "*ctypes*"
           ]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.coverage.run]
command_line = "-m pytest"
branch = true
source = ["./pyMilk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]
